--- a/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-02-view-modes-event-teaser/02-organisms-02-view-modes-event-teaser.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-02-view-modes-event-teaser/02-organisms-02-view-modes-event-teaser.html
@@ -57,7 +57,7 @@
 <article class="card">
   <div class="card__content">
     <h2 class="card__date">September 21</h2>
-    <h3 class="card__title"><a href="#">Title</a></h3>
+    <h3 class="card__primary-title"><a href="#">Title</a></h3>
     <div class="card__meta">
       <div class="card__list">
         <div class="card__list-label">Location:</div> United States
