--- a/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-02-view-modes/index.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-02-view-modes/index.html
@@ -138,7 +138,7 @@
 							<article class="card">
   <div class="card__content">
     <h2 class="card__date">September 21</h2>
-    <h3 class="card__title"><a href="#">Title</a></h3>
+    <h3 class="card__primary-title"><a href="#">Title</a></h3>
     <div class="card__meta">
       <div class="card__list">
         <div class="card__list-label">Location:</div> United States
@@ -156,7 +156,7 @@
 										&lt;article class=&quot;card&quot;&gt;
   &lt;div class=&quot;card__content&quot;&gt;
     &lt;h2 class=&quot;card__date&quot;&gt;September 21&lt;/h2&gt;
-    &lt;h3 class=&quot;card__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Title&lt;/a&gt;&lt;/h3&gt;
+    &lt;h3 class=&quot;card__primary-title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Title&lt;/a&gt;&lt;/h3&gt;
     &lt;div class=&quot;card__meta&quot;&gt;
       &lt;div class=&quot;card__list&quot;&gt;
         &lt;div class=&quot;card__list-label&quot;&gt;Location:&lt;/div&gt; United States
